Corrected an issue with image files.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="col-xs-2">
                     <div id="twitch">
                         <a href="#">
-                            <img src = "../images/twitch.png" class="center-block" />
+                            <img src = "images/twitch.png" class="center-block" />
                         </a>
                         <p class="text">Twitch Viewer</p>
                     </div>
@@ -172,7 +172,7 @@
                 <div class="col-xs-2">
                     <div id="pomo">
                         <a href="#">
-                            <img src = "../images/pomo.png" class="center-block" />
+                            <img src = "images/pomo.png" class="center-block" />
                         </a>
                         <p class="text">Pomodoro Timer</p>
                     </div>
@@ -181,7 +181,7 @@
                 <div class="col-xs-2">
                     <div id="wiki">
                         <a href="#">
-                            <img src = "../images/wiki.png" class="center-block" />
+                            <img src = "images/wiki.png" class="center-block" />
                         </a>
                         <p class="text">Wikipedia Search</p>
                     </div>
@@ -190,7 +190,7 @@
                 <div class="col-xs-2">
                     <div id="simon">
                         <a href="#">
-                            <img src = "../images/ss.png" class="center-block" />
+                            <img src = "images/ss.png" class="center-block" />
                         </a>
                         <p class="text">Simon Says</p>
                     </div>
@@ -199,7 +199,7 @@
                 <div class="col-xs-2">
                     <div id="calculator">
                         <a href="#">
-                            <img src = "../images/calc.png" class="center-block" />
+                            <img src = "images/calc.png" class="center-block" />
                         </a>
                         <p class="text">Calculator</p>
                     </div>
@@ -208,7 +208,7 @@
                 <div class="col-xs-2">
                     <div id="weather">
                         <a href="#">
-                            <img src = "../images/weather.png" class="center-block" />
+                            <img src = "images/weather.png" class="center-block" />
                         </a>
                         <p class="text">Local Weather</p>
                     </div>
